<resources>
    <string name="app_name">Proyecto Final - Programación V</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Proyecto Final</string>
    <string name="nav_header_subtitle">djbarrios@galileo.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="department">Departamento</string>
    <string name="township">Municipio</string>
    <string name="title">Titulo</string>
    <string name="description">Descripción</string>
    <string name="latitude">Latitud</string>
    <string name="longitude">Longitud</string>
    <string name="parkingLot">Parqueo</string>
    <string name="internet">Internet</string>
    <string name="hotels">Hoteles</string>
    <string name="siteType">Tipo de Sitio</string>
    <string name="addSite">Agregar Sitio</string>
    <string name="hashotels">Sí Tiene hotel</string>
    <string name="hasinternet">Sí tiene internet</string>
    <string name="hasparkinglot">Sí tiene parqueo</string>
    <string name="donthashotels">No Tiene hotel</string>
    <string name="donthasinternet">No tiene internet</string>
    <string name="donthasparkinglot">No tiene parqueo</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="id">ID</string>
    <string name="find">Buscar</string>
</resources>
